Fix output box scrollbars visibility, upd date

--- a/css/core.css
+++ b/css/core.css
@@ -141,7 +141,7 @@ kbd {
 #result_output_box {
     display: none;
     white-space: nowrap;
-    overflow: scroll;
+    overflow: auto;
     background: linear-gradient(to right, var(--color-outputbox-0), var(--color-outputbox-1));
     background-size: 400% 400%;
     border-radius: 4px;
